# fifa_wc_2026_lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: data_sources.yaml  data_sources_mens_national.yaml  data_sources_national.yaml  phase2.yaml  week1.yaml
notebooks/exploratory/: week1_eda.ipynb
scripts/: build_unified_dataset.py  build_wc_stack.py  run_phase2.py  run_week1_etl.py  train_baseline.py
src/api/: __init__.py
src/dashboard/: __init__.py
src/data/: __init__.py  pipeline.py  schemas.py  soccerdata_fbref.py  statsbomb.py
src/embeddings/: __init__.py  tactical.py
src/features/: __init__.py  elo.py  match_baseline.py  tactical_events.py  tactical_matchup.py  tactical_matrix.py  tactical_normalize.py
src/models/: __init__.py  baseline_match.py  match_ablation.py  metrics.py
src/simulation/: __init__.py
tests/: test_baseline_train.py  test_extra_sources.py  test_metrics.py  test_schemas.py  test_scope_filters.py  test_statsbomb.py  test_tactical_phase2.py
tests/fixtures/openfootball/: sample_euro.txt
tests/fixtures/statsbomb/data/events/: 90001.json  90002.json
tests/fixtures/statsbomb/data/lineups/: 90001.json  90002.json
tests/fixtures/statsbomb/data/matches/99/: 1.json
