[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fifa-wc-2026-intelligence"
version = "0.1.0"
description = "Interaction-aware football intelligence for FIFA WC 2026"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# soccerdata pulls in seleniumbase's pytest plugin (breaks on Windows latest_logs/)
addopts = "-p no:seleniumbase"

[tool.ruff]
line-length = 100
target-version = "py310"
